--- a/Task_(2)_Week_1.ipynb
+++ b/Task_(2)_Week_1.ipynb
@@ -1783,15 +1783,7 @@
       "cell_type": "markdown",
       "source": [
         "* <h3>Summarize the key insights gained from the data analysis.<h3/>\n",
-        "* <h3>Draw conclusions based on the patterns observed in the data.<h3/>"
-      ],
-      "metadata": {
-        "id": "a9akovSwo5l2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
+        "\n",
         "*   Dealing with the missing values\n",
         "*   Handling the inconsistency in data entry\n",
         "\n",
@@ -1800,10 +1792,13 @@
         "*   capturing the data to get better understanding\n",
         "\n",
         "\n",
+        "\n",
+        "* <h3>Draw conclusions based on the patterns observed in the data.<h3/>\n",
+        "\n",
         "We can see in average visualization of the traffic and city that it increaing in the large city and then get lower in the others."
       ],
       "metadata": {
-        "id": "CqGrIqjwCml3"
+        "id": "a9akovSwo5l2"
       }
     }
   ]
