--- a/Task_(1)_Week_1.ipynb
+++ b/Task_(1)_Week_1.ipynb
@@ -5,9 +5,16 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "RNId1lMc3iUT",
+        "WiipgZA4l1Wt",
         "RR8q7NzAmXvi",
         "ANF5wAzWmYyc",
-        "RQpjcBLfoZgr"
+        "RQpjcBLfoZgr",
+        "OjwISK8nocUT",
+        "4k-cDvL8oflR",
+        "Lz4jQtNBoih-",
+        "VfUFvWxUopoh",
+        "G4KCbzg4osSW"
       ],
       "include_colab_link": true
     },
@@ -3303,15 +3310,6 @@
       "cell_type": "markdown",
       "source": [
         "* <h3>Summarize the key insights gained from the data analysis.<h3/>\n",
-        "* <h3>Draw conclusions based on the patterns observed in the data.<h3/>"
-      ],
-      "metadata": {
-        "id": "a9akovSwo5l2"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "\n",
         "*   Dealing with the missing values\n",
         "*   Handling the inconsistency in data entry\n",
@@ -3321,14 +3319,14 @@
         "*   capturing the data to get better understanding\n",
         "\n",
         "\n",
-        "We can see that the Number of casualties may depend on the age of group driver.\n",
+        "* <h3>Draw conclusions based on the patterns observed in\n",
+        "the data.<h3/>\n",
         "\n",
         "\n",
-        "\n",
-        "\n"
+        "We can see that the Number of casualties may depend on the age of group driver."
       ],
       "metadata": {
-        "id": "CD66V38TouyP"
+        "id": "a9akovSwo5l2"
       }
     }
   ]
