Files Moved into Folder

--- a/Mini_Projects/Week_3/DriverDrowsiness_MiniProject.ipynb
+++ b/Mini_Projects/Week_3/DriverDrowsiness_MiniProject.ipynb
@@ -24,8 +24,57 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Khuzamaalk/T5_BootCamp/blob/main/M_last_mod_mini_proj.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Khuzamaalk/T5_BootCamp/blob/main/DriverDrowsiness_MiniProject.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Project Overview\n",
+        "\n",
+        "Develop a reliable Driver Drowsiness Detection System that can accurately identify signs of drowsiness in drivers, helping to prevent accidents and improve road safety.\n",
+        "\n",
+        "Implementing this technology can play a crucial role in reducing traffic accidents, saving lives, and enhancing overall traffic management.\n",
+        "\n",
+        "So, we will create a model that can effectively solve this traffic-related problem."
+      ],
+      "metadata": {
+        "id": "FxOY7_9JiMik"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Dataset Description\n",
+        "\n",
+        "**Dataset Name:** Drowsiness dataset\n",
+        "\n",
+        "Driver drowsiness detection is a car safety technology which helps prevent accidents caused by the driver getting drowsy. Various studies have suggested that around 20% of all road accidents are fatigue-related, up to 50% on certain roads.\n",
+        "\n",
+        "The dataset has a 4 classes:\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   **Closed**: Containing images of closed eyes.\n",
+        "*   **Open**: Containing images of closed eyes.\n",
+        "*   **no_yawn**: Containing images of people that are not yawning.\n",
+        "*   **yawn**: Containing images of people yawing.\n",
+        "\n",
+        "\n",
+        "But in this project, we will focus only on 2 classes which are **Closed** and **Open**"
+      ],
+      "metadata": {
+        "id": "meL8Gs4OjUxN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Install Libraries"
+      ],
+      "metadata": {
+        "id": "iufR3-WRgipL"
+      }
     },
     {
       "cell_type": "code",
@@ -109,6 +158,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Read The Dataset"
+      ],
+      "metadata": {
+        "id": "1izzM4iGgmuM"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!kaggle datasets download -d dheerajperumandla/drowsiness-dataset"
@@ -188,6 +246,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Connect To Database\n",
+        "\n",
+        "1.   Connect to MongoDB.\n",
+        "2.   Store the dataset in the database.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Rgq80u2igqL-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from pymongo import MongoClient\n",
@@ -223,6 +294,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Retrieve the dataset from the Database\n",
+        "\n",
+        "After we store the dataset in MongoDB, we now want to retrieve it from the database instead of reading directly"
+      ],
+      "metadata": {
+        "id": "FIRf948emKRb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "images = []\n",
@@ -245,6 +327,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Data normalizing"
+      ],
+      "metadata": {
+        "id": "Zruz0NfxmaHL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
@@ -257,6 +348,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Splitting"
+      ],
+      "metadata": {
+        "id": "7gGolBQFmen2"
+      }
     },
     {
       "cell_type": "code",
@@ -324,6 +424,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Visualization\n",
+        "\n",
+        "### 1.   Training set\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VCEdNlncmijJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -366,6 +478,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.   Testing Set"
+      ],
+      "metadata": {
+        "id": "ZzEtAkxwnE8b"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "display_images(X_val, y_val,class_names, num_images=5)"
@@ -393,9 +514,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Preprocessing"
+      ],
+      "metadata": {
+        "id": "ACIfNmEhnTEd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data Augmentation"
+      ],
+      "metadata": {
+        "id": "q-EHizsRnvb9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Data Agumentation\n",
+        "# Data Augmentation\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "datagen_train = ImageDataGenerator(\n",
         "    rescale=1./255,\n",
@@ -459,6 +598,19 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Buliding\n",
+        "\n",
+        "The reason of Choosing **Convolutional neural network ( CNN )**:\n",
+        "\n",
+        "It balances complexity and performance. The sequential layers of convolutional help in effectively capturing features from images, while the dense layers focus on classification. The architecture progressively reduces the spatial dimensions and extracts important features, making it suitable for binary classification tasks."
+      ],
+      "metadata": {
+        "id": "9piKZEWynYZM"
+      }
     },
     {
       "cell_type": "code",
@@ -747,6 +899,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Model Evaluation"
+      ],
+      "metadata": {
+        "id": "738mU975ojte"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import classification_report\n",
@@ -844,6 +1005,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Test the Model\n",
+        "\n",
+        "I am testing the model with random images from the internet."
+      ],
+      "metadata": {
+        "id": "4WcQba4uoohO"
+      }
     },
     {
       "cell_type": "code",
